--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>Finola Birhire</h1>
         <p>A curious soon to be unemployed individual seeking <strong>Truth, Simplicity & Ease</strong></p>
-        <p>I am an aspiring project manager, who would ♥️ to work on creative projects in Tech or the Arts and Design world. I am learning web development to give some grounding to things I was learning as a CE agent for a SaaS product. I am enjoying the creative aspect of web development so far, and I find the process of learning these languages interesting. I am passionate about Architecure and Interior Design and hope to one day build or renovate my own home. I &#9829; yoga and what it has done for my peace of mind. I hope to carry this element of ease or <em>sukha</em> in everything I do.</p>
+        <p>I am an aspiring project manager, who would ♥️ to work on creative projects in Tech or the Arts and Design world. I am learning web development to give some grounding to things I was learning as a CE agent for a SaaS product. I am enjoying the creative aspect of web development so far, and I find the process of learning these languages interesting. I am passionate about Architecure and Interior Design and hope to one day build or renovate my own home. I &#9829; yoga and what it has done for my peace of mind. I hope to carry the element of ease or <em>sukha</em> in everything I do.</p>
       </td>
     </tr>
   </table>
