--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Finola's First Website</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -12,20 +13,22 @@
       <td><img src="images/Finola.png" alt="An image of Finola"></td>
       <td>
         <h1>Finola Birhire</h1>
-        <p>A curious soon to be unemployed individual seeking <strong>Truth, Simplicity & Ease</strong></p>
-        <p>I am an aspiring project manager, who would ♥️ to work on creative projects in Tech or the Arts and Design world. I am learning web development to give some grounding to things I was learning as a CE agent for a SaaS product. I am enjoying the creative aspect of web development so far, and I find the process of learning these languages interesting. I am passionate about Architecure and Interior Design and hope to one day build or renovate my own home. I &#9829; yoga and what it has done for my peace of mind. I hope to carry the element of ease or <em>sukha</em> in everything I do.</p>
+        <p>A curious soon individual seeking <strong>Truth, Simplicity & Ease</strong></p>
+        <p>I am an aspiring project manager, who would &#9829; to work on creative projects in Tech or the Arts and Design world. I am learning web development to give some grounding to issues I was troubleshooting as a CE agent for a SaaS product. I
+          am enjoying the creative aspect of web development so far, and it's been quite an eye opening experience. I am passionate about Architecture and Interior Design and hope to one day build or renovate my own home. I &#9829; yoga and what
+          it has done for my peace of mind. I hope to carry the element of ease or <em>sukha</em> in everything I do.</p>
       </td>
     </tr>
   </table>
-  <hr size="4" noshade>
-  <h3>Education</h3>
+  <hr>
+  <h2>Education</h2>
   <ul>
     <li>Udemy - <a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/">The Complete Web Development Bootcamp (2021)</a></li>
     <li>Dublin Business School - <a href="https://www.dbs.ie/course/professional-evening-diploma/part-time-evening-diploma-in-project-management-dublin-business-school">Project Management Diploma (2020)</a></li>
     <li>Trinity College Dublin - <a href="https://www.tcd.ie/courses/undergraduate/tsm/">Bachelor of Arts (Hons) in History of Art and Architecture and French (2015)</a></li>
   </ul>
   <hr>
-  <h3>Hobbies</h3>
+  <h2>Hobbies</h2>
   <ol>
     <li>Yoga via <a href="https://yogawithadriene.com/">Yoga with Adrienne #ywa</a></li>
     <ul>
@@ -37,7 +40,7 @@
     <li>Hill Walking</li>
   </ol>
   <hr>
-  <h3>Work Experience</h3>
+  <h2>Work Experience</h2>
   <table cellspacing="10">
     <thead>
       <tr>
@@ -61,7 +64,7 @@
     </tbody>
   </table>
   <hr>
-  <h3>Skills</h3>
+  <h2>Skills</h2>
   <table cellspacing="10">
     <tbody>
       <tr>
@@ -93,7 +96,12 @@
     </tbody>
   </table>
   <hr>
-  <a href="Contact Me.html">Contact me</a> here if you want to chat!
+  <a href="Contact Me.html">Contact me</a> here if you want to chat! <br>
+<br>
+<br>
+  This is not a real CV, it's a project for a Web Dev Course
 </body>
+
+
 
 </html>
