--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Finola's First Website</title>
-  <link type="text/css" rel="stylesheet" href="https://github.com/finola-curio/CV/blob/main/css/styles.css">
+  <link rel="stylesheet" href="https://github.com/finola-curio/CV/blob/main/css/styles.css"> 
 </head>
 
 <body>
